[package]
name = "quantum-goldchain"
version = "0.1.0"
edition = "2021"
authors = ["QTC Development Team"]
description = "Quantum Goldchain (QTC) - A decentralized cryptocurrency with RandomX mining"
license = "MIT"
repository = "https://github.com/quantumgold/qtc"

[[bin]]
name = "qtcd"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Cryptography
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
sha2 = "0.10"
ripemd = "0.1"
rand = "0.8"
bitcoin_hashes = "0.13"

# BIP39 and HD wallets
bip39 = "2.0"
bitcoin = { version = "0.31", features = ["secp-recovery"] }
hdpath = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Storage - using sled instead of rocksdb to avoid bindgen issues
sled = "0.34"

# CLI
clap = { version = "4.4", features = ["derive", "color"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# REST API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Networking
libp2p = { version = "0.53", features = ["tcp", "mdns", "noise", "yamux", "gossipsub", "kad", "ping", "identify", "tokio", "macros"] }

# RandomX (via FFI)
libc = "0.2"

# Utilities
hex = "0.4"
bs58 = "0.5"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Multisig support
miniscript = "11.0"

# System info
num_cpus = "1.16"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3.8"
